--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,11 +3,13 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
+  background-color: aquamarine;
+  padding: 10px;
 }
 .grid {
   display: grid;
+  margin-top: 50px;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 10px;
 }
@@ -47,4 +49,12 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-align: center;
+}
+.header_title {
+  background-color: lime;
+  padding: 10px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: gray;
+  border-radius: 10px;
 }
