--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   min-height: 100vh;
-  background-color: #334456;
+  background-color: #181818;
   padding: 10px;
 }
 .grid {
@@ -51,18 +51,87 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-align: center;
 }
-.header_title {
-  background-color: lime;
-  padding: 10px;
+.heading {
+  display: flex;
+  width: auto;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  color: rgb(45, 45, 45);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: gray;
+}
+.header_title {
+  padding: 10px;
+  margin: 50px;
   border-radius: 10px;
 }
-
-@media screen and (max-width: 395px) {
+#csr_title {
+  background-color: #01e37f;
+}
+#ssr_title {
+  background-color: #cce5e5;
+}
+#ssg_title {
+  background-color: #e4eaef;
+}
+.btncsr {
+  padding: 10px;
+  border-radius: 6px;
+  border: none;
+  margin: 5px;
+  background-color: #62e3c6;
+  color: black;
+  font-size: 15px;
+  font-weight: 800;
+}
+.btnssr {
+  padding: 10px;
+  border-radius: 6px;
+  border: none;
+  margin: 5px;
+  background-color: #ffd800;
+  color: black;
+  font-size: 15px;
+  font-weight: 800;
+}
+.btnssg {
+  padding: 10px;
+  border-radius: 6px;
+  border: none;
+  margin: 5px;
+  background-color: #7b53df;
+  color: white;
+  font-size: 15px;
+  font-weight: 800;
+}
+@media screen and (max-width: 414px) {
   .grid {
     display: flex;
     flex-direction: column;
+  }
+  .card {
+    height: 250px;
+    width: 250px;
+    border-radius: 50%;
+    margin-bottom: 30px;
+  }
+  .card img {
+    max-height: 100px;
+  }
+  .header_title {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .grid {
+    display: flex;
+    flex-direction: column;
+  }
+  .card {
+    margin-bottom: 40px;
+    box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px,
+      rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px,
+      rgb(255, 156, 85) 0px 0px 0px 12px, rgb(255, 85, 85) 0px 0px 0px 15px;
   }
 }
